Fix program description hint overflow

--- a/less/style.less
+++ b/less/style.less
@@ -398,7 +398,6 @@ body,ul,li,h1,h2,p {
     -webkit-flex-direction: column;
     flex-direction: column;
 
-    margin-top: 5px;
     margin-left: 5px;
 }
 
@@ -426,6 +425,10 @@ body,ul,li,h1,h2,p {
     font-size: 1.3em;
 }
 
+.program-disclaimer,
+.program-category {
+    margin-top: -4px;
+}
 .program-category {
     // hack; see .program-disclaimer for comment
     z-index: 2;
